--- a/client/src/features/VideoPlayer/VideoPlayer.css
+++ b/client/src/features/VideoPlayer/VideoPlayer.css
@@ -1,21 +1,16 @@
-.video-player-container {
-  width: 100vw;
-  height: 100vh;
-}
-
-.video-player-container .video-player {
+.video-player {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
 }
 
-.video-player-container .canvas {
+.canvas {
   height: auto;
   width: auto;
 }
 
-.video-player-container .video-element {
+.video-element {
   width: 100%;
   visibility: hidden;
 }
