--- a/client/src/features/Timeline/Timeline.css
+++ b/client/src/features/Timeline/Timeline.css
@@ -1,7 +1,7 @@
 .timeline {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
   position: relative;
   border: 1px solid #e8e8e8;
 }
