--- a/client/src/features/Timeline/VideoTrack/components/VideoBlock/VideoBlock.css
+++ b/client/src/features/Timeline/VideoTrack/components/VideoBlock/VideoBlock.css
@@ -1,8 +1,9 @@
 .video-block-container {
   position: absolute;
+  height: 100%;
   cursor: pointer;
-  border: 1px solid black;
-  border-radius: 10px;
+  border: 2px solid black;
+  border-radius: 8px;
   overflow: hidden;
   z-index: 1;
   background: none;
@@ -27,6 +28,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 100%;
   background-color: rgb(180, 235, 253);
   border-radius: 8px;
   overflow: hidden;
