--- a/client/src/pages/EditingPage/EditingPage.css
+++ b/client/src/pages/EditingPage/EditingPage.css
@@ -1,9 +1,30 @@
-.video-player-container {
+.editing-page-layout {
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.sidebar-container {
+  width: auto;
+  height: 100vh;
+}
+
+.video-player-timeline-container {
+  max-width: 100%;
   width: 100%;
-  height: 70vh;
+  height: 100vh;
+}
+
+.video-player-container {
+  max-width: 100%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .timeline-container {
   width: 100%;
-  height: 25vh;
+  height: 25%;
 }
