--- a/client/src/pages/EditingPage/EditingPage.css
+++ b/client/src/pages/EditingPage/EditingPage.css
@@ -1,8 +1,8 @@
 .editing-page-layout {
   display: flex;
   flex-direction: row;
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .sidebar-container {
