Fixed video selecting and motion controls

--- a/client/src/features/Timeline/VideoTrack/components/VideoBlock/VideoBlock.scss
+++ b/client/src/features/Timeline/VideoTrack/components/VideoBlock/VideoBlock.scss
@@ -14,14 +14,13 @@ $standard-radius: 10px;
     border 0.2s,
     background 0.2s;
 
-  .is-selected {
-    border: 2px solid #1976d2;
-    box-shadow: 0 0 8px 2px #1976d288;
-    background: #e3f2fd;
+  &.is-selected {
+    transition: border 0s;
+    border: 3px dashed #1976d2;
     z-index: 2;
   }
 
-  .is-dragging {
+  &.is-dragging {
     opacity: 0.5;
   }
 }
